[gd_scene load_steps=7 format=3 uid="uid://cglxnfwull8ru"]

[ext_resource type="Script" path="res://scripts/agent.gd" id="1_ibw02"]
[ext_resource type="Material" uid="uid://hdwqfm803php" path="res://materials/circle.material" id="2_fpfhu"]
[ext_resource type="Script" path="res://scripts/ai_controller.gd" id="3_371o7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7k38v"]
radius = 25.0

[sub_resource type="QuadMesh" id="QuadMesh_vow8r"]

[sub_resource type="InputEventKey" id="InputEventKey_ifb1h"]
device = -1
keycode = 82
unicode = 114

[node name="Agent" type="RigidBody2D" node_paths=PackedStringArray("ai_controller", "timer") groups=["CIRCLE"]]
material = ExtResource("2_fpfhu")
gravity_scale = 0.0
continuous_cd = 1
max_contacts_reported = 1000
contact_monitor = true
linear_damp = 5.0
script = ExtResource("1_ibw02")
ai_controller = NodePath("AIController")
timer = NodePath("Timer")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7k38v")

[node name="Mesh" type="MeshInstance2D" parent="."]
use_parent_material = true
scale = Vector2(50, 50)
mesh = SubResource("QuadMesh_vow8r")

[node name="AIController" type="Node2D" parent="." groups=["AGENT"]]
script = ExtResource("3_371o7")
remove_last_episode_key = SubResource("InputEventKey_ifb1h")
action_repeat = 8

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_walk_timer_timeout"]
